# arm_baremetal

./: .gitignore  CMakeLists.txt  README.md  build.sh  create-sd.sh  run.sh
bootloader/: u-boot
src/: cstart.c  linkscript.ld  startup.s  uart_pl011.c
